# anihistory_server

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
migrations/2018-07-15-004507_users/: up.sql
migrations/2018-07-15-141104_anime/: up.sql
migrations/2018-07-15-212010_users/: up.sql
migrations/2018-07-15-212401_anime/: up.sql
migrations/2018-07-15-212524_lists/: up.sql
src/: anilist_models.rs  anilist_query.rs  database.rs  main.rs  models.rs  query_structs.rs  schema.rs
