[package]
name = "anihistory_server"
version = "0.3.0"
authors = ["Tyler Bratton <tylerbratton96@gmail.com>"]

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.1", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.13.0"
log = "0.4.6"
fern = "0.5.7"
reqwest = "0.9.9"
rocket = "0.4.0"
rocket_contrib = { version="0.4.0", default-features=false, features=["json", "diesel_postgres_pool"] }
rusoto_core = "0.36.0"
rusoto_s3 = "0.36.0"
serde_derive = "1.0.85"
serde_json = "1.0.37"
serde = "1.0.85"
rocket_cors = "0.4.0"