[package]
name = "anihistory_server"
version = "0.3.0"
authors = ["Tyler Bratton <tylerbratton96@gmail.com>"]

[dependencies]
chrono = { version = "0.4.7", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.14.1"
log = "0.4.8"
fern = "0.5.8"
reqwest = "0.9.19"
rocket = "0.4.2"
rocket_contrib = { version="0.4.2", default-features=false, features=["diesel_postgres_pool", "json", "serve"] }
rusoto_core = "0.41.0"
rusoto_s3 = "0.41.0"
serde_derive = "1.0.98"
serde_json = "1.0.40"
serde = "1.0.98"
rocket_cors = "0.5.0"