[package]
name = "anihistory_server"
version = "0.4.0"
authors = ["Tyler Bratton <tylerbratton96@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.7", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.8"
fern = "0.6.0"
reqwest = { version = "0.10.1", features = ["blocking", "json"] }
rocket = "0.4.2"
rocket_contrib = { version="0.4.2", default-features=false, features=["postgres_pool", "json", "serve"] }
rusoto_core = "0.42.0"
rusoto_s3 = "0.42.0"
rusoto_signature = "0.43.0"
serde_derive = "1.0.98"
serde_json = "1.0.40"
serde = "1.0.98"
rocket_cors = "0.5.0"
postgres = { version = "0.15", features = ["with-chrono"] }